stefan LineViewer works better with strict Mozilla
stefan fixed bug 343 (browsing for mdds under "/dataDefinitions" fails)

0.5.5.24; 03 mar 2003 stefan
fixed bug 283 (some JSPX don't link pages indicated in jsp:include)
fixed bug 282 (JSPX - absolute links to included files are broken when the makumba servlet context is not root)
fixed bug 173 (getDataDefinition() works for java package names, should not)
centralized version computation
fixed bug 70 (returns field name for description if description is not set)

0.5.5.23; 28 feb 2003 stefan
fix for bug 291 in LineViewer

0.5.5.22; 27 feb 2003 cristi
fixes for bugs 
- 300: bad treatment of root data in the case of multiple roots)
- 310: problem with AT_BEGIN variables in jasper2, replaced with NESTED+AT_END
- 311: problem with jasper2 reusing InputTags, fixed

0.5.5.21; 20 feb 2003 cristi
better fix for bug 301: connections seem to be closed by a non-makumba entity with mysql 4
through a fix for bug 314: ResourcePool loses elements in garbage collection finalization

0.5.5.20; 18 feb 2003 cristi
fix for bug 301: connections seem to be closed by a non-makumba entity with mysql 4

0.5.5.19; 12 feb 2003 stefan
fixed bug 299 (content type was prefixed by ' ' on file upload)

0.5.5.18; 13 jan 2003 stefan
publish jar uses download.makumba.org and it publishes also to sourceforge.net
makumba.jar is always the latest one
makumba-a_b_c_d.jar files are kept for historical reasons.

----------------------------------------------
| 2003-01-08 - CVS repository lost due to HDD failure.    
| reconstructed all sources, but lost history, hence lover revision numbers
----------------------------------------------

0.5.5.17; 6 jan 2003 cristi
better ways of buiding jars, without interfering with ../../util-java/lib

better util.longContent logging level and documentation (too little change for a new version)

0.5.5.16; 9 dec 2002 cristi