@@ -98,10 +98,6 @@ in a directory called "<b>dataDefinitions</b>" in the CLASSPATH (e.g. classes/da
 <font color="#000099">OLDSTYLE: if no mdd file is present, the no-extension
 file (i.e. best/Student) is looked up</font></li>
 
-<li>
-<font color="#000099">OLDSTYLE: in a directory called "<b>metadata.files</b>"
-in the CLASSPATH (e.g. classes/metadata.files/best/Student). Typically
-such names are lowercase (best.student)</font></li>
 </ul>
 </blockquote>
 <b>Data objects (records)</b> are stored in <b>databases</b>.
